--- a/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.de.resx
+++ b/Modules/Devices/src/Devices.Infrastructure/Translations/Resources.de.resx
@@ -25,7 +25,7 @@
         <value>Neuigkeiten verfügbar</value>
     </data>
     <data name="DeletionProcessApprovedNotification.Body" xml:space="preserve">
-        <value>Ein Löschvorgang einer deiner Identitäten wurde bestätigt und wird in Kürze prozessiert.</value>
+        <value>Ein Löschvorgang einer Ihrer Identitäten wurde bestätigt und wird in Kürze prozessiert.</value>
     </data>
     <data name="DeletionProcessApprovedNotification.Title" xml:space="preserve">
         <value>Löschvorgang bestätigt</value>
@@ -34,37 +34,37 @@
         <value>Löschvorgang abgebrochen</value>
     </data>
     <data name="DeletionProcessCancelledByOwnerNotification.Body" xml:space="preserve">
-        <value>Ein Löschvorgang einer deiner Identitäten wurde von dir abgebrochen.</value>
+        <value>Ein Löschvorgang einer Ihrer Identitäten wurde von Ihnen abgebrochen.</value>
     </data>
     <data name="DeletionProcessCancelledBySupportNotification.Body" xml:space="preserve">
-        <value>Ein Löschvorgang einer deiner Identitäten wurde von unserem Support Team abgebrochen.</value>
+        <value>Ein Löschvorgang einer Ihrer Identitäten wurde von unserem Support Team abgebrochen.</value>
     </data>
     <data name="DeletionProcessCancelledBySupportNotification.Title" xml:space="preserve">
         <value>Löschvorgang abgebrochen</value>
     </data>
     <data name="DeletionProcessGracePeriodReminderPushNotification.Body" xml:space="preserve">
-        <value>Deine Identität wird in ein paar Tagen gelöscht. Bis dahin hast du die Möglichkeit, diesen Vorgang abzubrechen.</value>
+        <value>Ihre Identität wird in ein paar Tagen gelöscht. Bis dahin haben Sie die Möglichkeit, diesen Vorgang abzubrechen.</value>
     </data>
     <data name="DeletionProcessGracePeriodReminderPushNotification.Title" xml:space="preserve">
         <value>Deine Identität wird gelöscht</value>
     </data>
     <data name="DeletionProcessStartedPushNotification.Body" xml:space="preserve">
-        <value>Ein Löschvorgang wurde für eine deiner Identitäten gestartet.</value>
+        <value>Ein Löschvorgang wurde für eine Ihrer Identitäten gestartet.</value>
     </data>
     <data name="DeletionProcessStartedPushNotification.Title" xml:space="preserve">
         <value>Löschvorgang gestartet</value>
     </data>
     <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Body" xml:space="preserve">
-        <value>Ein Löschvorgang einer deiner Identitäten wartet auf eine Bestätigung. Falls du nicht innerhalb weniger Tage bestätigst, wird der Löschvorgang abgebrochen.</value>
+        <value>Ein Löschvorgang einer Ihrer Identitäten wartet auf eine Bestätigung. Falls Sie diesen nicht innerhalb weniger Tage bestätigen, wird der Löschvorgang abgebrochen.</value>
     </data>
     <data name="DeletionProcessWaitingForApprovalReminderPushNotification.Title" xml:space="preserve">
         <value>Löschvorgang wartet auf Bestätigung</value>
     </data>
     <data name="DeletionStartsPushNotification.Body" xml:space="preserve">
-        <value>Die Löschung deiner Identität ist erfolgt.</value>
+        <value>Die Löschung Ihrer Identität ist erfolgt.</value>
     </data>
     <data name="DeletionStartsPushNotification.Title" xml:space="preserve">
-        <value>Deine Identität ist jetzt gelöscht.</value>
+        <value>Ihre Identität ist jetzt gelöscht.</value>
     </data>
     <data name="ExternalEventCreatedPushNotification.Body" xml:space="preserve">
         <value>Es sind Neuigkeiten in der App verfügbar.</value>
