refactor:  translation names

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -1,101 +1,101 @@
 {
   "@@locale": "en",
-  "add": "Add",
+ "add": "Add",
   "addQuota": "Add Quota",
   "address": "Address",
   "cancel": "Cancel",
-  "change_client_secret": "Change Client Secret",
-  "change_tier": "Change Tier",
-  "client_ID": "Client ID",
-  "client_secret": "Client Secret",
-  "create_client": "Create Client",
-  "create_tier": "Create Tier",
+  "create": "Create",
+  "changeClientSecret": "Change Client Secret",
+  "changeTier": "Change Tier",
+  "clientID": "Client ID",
+  "clientSecret": "Client Secret",
+  "clientSecret_copiedToClipboard": "Client secret copied to clipboard.",
+  "clientSecret_message": "A client secret will be generated if this field is left blank.",
+  "clientSecret_save_message": "Please save the Client Secret since it will be inaccessible after exiting.",
   "clients": "Clients",
   "close": "Close",
   "confirm": "Confirm",
-  "copy_public_key": "Copy public key",
-  "copy_to_clipboard": "Copy to clipboard",
-  "create": "Create",
   "createdAt": "Created At",
-  "created_with_client": "Created with Client",
   "dark": "Dark",
   "day": "Day",
-  "datawallet_version": "Datawallet Version",
-  "default_tier": "Default Tier",
+  "datawalletVersion": "Datawallet Version",
+  "defaultTier": "Default Tier",
   "devices": "Devices",
-  "display_name": "Display Name",
+  "displayName": "Display Name",
   "hour": "Hour",
-  "id": "ID",
-  "identities": "Identities",
-  "identity_version": "Identity Version",
-  "individual": "Individual",
-  "last_login_at": "Last Login at",
+  "identityVersion": "Identity Version",
+  "lastLoginAt": "Last Login at",
   "light": "Light",
   "max": "Max",
-  "max_amount": "Max Amount",
-  "max_identities": "Max Identities",
+  "maxAmount": "Max Amount",
+  "maxIdentities": "Max Identities",
   "metric": "Metric",
   "month": "Month",
   "name": "Name",
-  "number_of_devices": "Number of Devices",
-  "number_of_identities": "Number of Identities",
+  "numberOfDevices": "Number of Devices",
+  "numberOfIdentities": "Number of Identities",
   "period": "Period",
-  "public_key": "Public Key",
   "quotas": "Quotas",
   "retry": "Retry",
-  "remove_quotas": "Remove Quotas",
-  "remove_clients": "Remove Clients",
   "save": "Save",
+  "searchTiers": "Search Tiers",
   "settings": "Settings",
-  "search_clients": "Search Clients",
-  "search_tiers": "Search Tiers",
   "source": "Source",
   "system": "System",
-  "the_identity": "the identity",
-  "the_tier": "the tier",
   "theme": "Theme",
   "tier": "Tier",
   "tiers": "Tiers",
   "usage": "Usage",
   "used": "Used",
-  "quotas": "Quotas",
   "week": "Week",
   "year": "Year",
   "yes": "Yes",
-  "error_data_load_failed": "Failed to load data",
-  "error_loading_data": "An error occurred loading the data.",
-  "error_deleting_quota": "An error occurred while deleting the quota(s). Please try again.",
-  "error_deleting_client": "An error occurred while deleting the client(s). Please try again.",
-  "no_quotas_applied_for_identity": "No quotas applied for this identity.",
-  "no_quotas_added_for_tier": "No quotas added to this tier.",
-  "no_identities_found": "No identities found.",
-  "no_clients_found": "No clients found.",
-  "no_tiers_found": "No tiers found.",
-  "copy_to_clipboard_message": "Client Secret copied to clipboard.",
-  "deletion_of_quota_message": "Are you sure you want to remove the selected quotas from",
-  "display_name_message": "Client ID will be used as a Display Name if no value is provided.",
-  "failed_to_update_identity_message": "Failed to update identity. Please try again.",
-  "form_message_for_tier": "Please fill the form below to create your Tier",
-  "identity_copied_to_clipboard_message": "Identity address copied to clipboard.",
-  "identity_updated_message": "Identity updated successfully.",
-  "max_identities_message": "The maximum number of Identities that can be created with this Client.",
-  "max_amount_message": "Only numbers greater or equal to 0 are valid.",
-  "name_cannot_be_empty_message": "Name cannot be empty.",
-  "no_identity_limit_message": "No Identity limit will be assigned if this field is left blank.",
-  "public_key_copied_to_clipboard_message": "Public key copied to clipboard.",
-  "remove_clients_message": "Are you sure you want to remove the selected clients?",
-  "list_of_all_clients": "A list of existing clients",
-  "list_of_all_identities": "A list of existing identities",
-  "list_of_all_tiers": "A list of existing tiers",
-  "save_the_client_secret_message": "Please save the Client Secret since it will be inaccessible after exiting.",
-  "selected_quota_removed": "Selected quota(s) have been removed.",
-  "selected_client_removed": "Selected client(s) have been removed.",
-  "tier_created_successfully_message": "Tier was created successfully.",
-  "tier_quota_effect_message": "Tier quotas do not take effect if there is an individual quota.",
-  "view_quotas_for_the_tier": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
-  "view_and_assign_quota_for_identity": "View and assign quotas for this identity.",
-  "view_and_assign_quota_for_tier": "View and assign quotas for this tier.",
-  "view_identities_associated_with_tier": "View Identities associated with this Tier.",
-  "client_secret_generated_message": "A client secret will be generated if this field is left blank.",
-  "client_id_generated_message": "A client ID will be generated if this field is left blank."
+  "addQuotaDialog_maxAmount_message": "Only numbers greater or equal to 0 are valid.",
+  "changeClientSecretDialog_copyToClipboard": "Copy to Clipboard",
+  "changeTierDialog_error": "Failed to update identity. Please try again.",
+  "changeTierDialog_success": "Identity updated successfully.",
+  "clientsOverview_title": "A list of existing clients",
+  "clientsOverview_noClientsFound": "No clients found.",
+  "clientsOverview_removeSelectedClients_title": "Remove Clients",
+  "clientsOverview_removeSelectedClients_message": "Are you sure you want to remove the selected clients?",
+  "clientsOverview_removeSelectedClients_error": "An error occurred while deleting the client(s). Please try again.",
+  "clientsOverview_removeSelectedClients_success": "Selected client(s) have been removed.",
+  "createClientDialog_title": "Create Client",
+  "createClientDialog_clientID_message": "A client ID will be generated if this field is left blank.",
+  "createClientDialog_displayName_message": "Client ID will be used as a Display Name if no value is provided.",
+  "createClientDialog_clientSecret_copyToClipboard": "Client Secret copied to clipboard.",
+  "createClientDialog_maxIdentities_message": "The maximum number of Identities that can be created with this Client.",
+  "createClientDialog_maxIdentities_noLimit_message": "No Identity limit will be assigned if this field is left blank.",
+  "createTierDialog_title": "Create Tier",
+  "createTierDialog_formMessage": "Please fill the form below to create your Tier",
+  "createTierDialog_nameCannotBeEmpty": "Name cannot be empty.",
+  "createTierDialog_tierCreatedSuccess": "Tier was created successfully.",
+  "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
+  "identityDetails_card_publicKey": "Public Key",
+  "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
+  "identityDetails_card_publicKey_tooltipMessage": "Copy public key",
+  "identityOverview_title": "A list of existing identities",
+  "identityQuotaTable_title_description": "View and assign quotas for this identity.",
+  "identityQuotaTable_noQuotaApplied": "No quotas applied for this identity.",
+  "identityQuotaTable_individual": "Individual",
+  "identityQuotaTable_tierQuotaEffectMessage": "Tier quotas do not take effect if there is an individual quota.",
+  "identitiesDataTable_noIdentitiesFound": "No identities found.",
+  "identitiesDataTable_failedToLoadData": "Failed to load data.",
+  "identitiesDataTable_createdWithClient": "Created with Client",
+  "identitiesFilter_searchClients": "Search Clients",
+  "quotaButtonGroup_removeQuotas_title": "Remove Quotas",
+  "quotaButtonGroup_deletionMessage": "Are you sure you want to remove the selected quotas from?",
+  "quotaButtonGroup_theIdentity": "The Identity",
+  "quotaButtonGroup_theTier": "The Tier",
+  "quotaButtonGroup_errorDeletingQuota": "An error occurred while deleting the quota(s). Please try again.",
+  "quotaButtonGroup_selectedQuotaRemoved": "Selected quota(s) have been removed.",
+  "tierDetails_tierID": "ID",
+  "tierDetails_quotaList_titleDescription": "View and assign quotas for this tier.",
+  "tierDetails_quotaList_titleDescription_readOnly": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
+  "tierDetails_quotaList_noQuotaForTier": "No quotas added to this tier.",
+  "tierDetails_identityList_title": "Identities",
+  "tierDetails_identityList_titleDescription": "View Identities associated with this Tier.",
+  "tierDetails_quotaList_titleDescription": "View and assign quotas for this tier.",
+  "tiersOverview_title_description": "A list of existing tiers",
+  "tiersOverview_noTiersFound": "No tiers found."
 }
