--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -3,5 +3,20 @@
     "cancel": "Cancel",
     "close": "Close",
     "save": "Save",
-    "yes": "Yes"
+    "yes": "Yes",
+    "deletionProcessAuditLogsDetails_waitingForApproval": "Waiting for Approval",
+    "deletionProcessAuditLogsDetails_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+    "deletionProcessAuditLogsDetails_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+    "deletionProcessAuditLogsDetails_approved": "The deletion process was approved.",
+    "deletionProcessAuditLogsDetails_rejected": "The deletion process was rejected.",
+    "deletionProcessAuditLogsDetails_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+    "deletionProcessAuditLogsDetails_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+    "deletionProcessAuditLogsDetails_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+    "deletionProcessAuditLogsDetails_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_unknownMessageKey": "Unknown message key."
 }
