chore: add more translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -4,6 +4,11 @@
     "close": "Close",
     "save": "Save",
     "yes": "Yes",
+    "deletionProcessAuditLogs_title": "Identity deletion process audit logs",
+    "deletionProcessAuditLogs_inputHint": "Enter an identity address",
+    "deletionProcessAuditLogsDetails_title": "Deletion Process Audit Logs",
+    "deletionProcessAuditLogsDetails_title_description": "View deletion process audit logs for Identity",
+    "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
     "deletionProcessAuditLogsDetails_waitingForApproval": "Waiting for Approval",
     "deletionProcessAuditLogsDetails_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
     "deletionProcessAuditLogsDetails_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
