chore: add find to translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -2,6 +2,7 @@
     "@@locale": "en",
     "cancel": "Cancel",
     "close": "Close",
+    "find": "Find",
     "save": "Save",
     "yes": "Yes",
     "deletionProcessAuditLogs_title": "Identity deletion process audit logs",
