refactor: rename translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -4,17 +4,17 @@
     "close": "Close",
     "save": "Save",
     "yes": "Yes",
-    "peer": "Peer",
-    "requestedBy": "Requested By",
-    "templateId": "Template ID",
-    "status": "Status",
-    "creationDate": "Creation Date",
-    "answeredAt": "Answered At",
-    "createdByDevice": "Created By Device",
-    "answeredByDevice": "Answered By Device",
-    "empty_relationship_table": "No relationships for this identity found.",
+    "identityRelationshipTable_peer": "Peer",
+    "identityRelationshipTable_requestedBy": "Requested By",
+    "identityRelationshipTable_templateId": "Template ID",
+    "identityRelationshipTable_status": "Status",
+    "identityRelationshipTable_creationDate": "Creation Date",
+    "identityRelationshipTable_answeredAt": "Answered At",
+    "identityRelationshipTable_createdByDevice": "Created By Device",
+    "identityRelationshipTable_answeredByDevice": "Answered By Device",
+    "identityRelationshipTable_emptyRelationshipTable": "No relationships for this identity found.",
     "retry": "Retry",
-    "relationships": "Relationships",
-    "view_identity_relationships": "View relationships of this identity",
-    "error_loading_data": "An error occurred loading data."
+    "identityRelationshipTable_relationships": "Relationships",
+    "identityRelationshipTable_viewIdentityRelationships": "View relationships of this identity",
+    "identityRelationshipTable_errorLoadingData": "An error occurred loading data."
 }
