fix: missing translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -71,6 +71,26 @@
   "createTierDialog_formMessage": "Please fill the form below to create your Tier",
   "createTierDialog_nameCannotBeEmpty": "Name cannot be empty.",
   "createTierDialog_tierCreatedSuccess": "Tier was created successfully.",
+  "deletionProcessAuditLogs_title": "Identity deletion process audit logs",
+  "deletionProcessAuditLogs_inputHint": "Enter an identity address",
+  "deletionProcessAuditLogsDetails_title": "Deletion Process Audit Logs",
+  "deletionProcessAuditLogsDetails_title_description": "View deletion process audit logs for Identity",
+  "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
+  "deletionProcessAuditLogsDetails_waitingForApproval": "Waiting for Approval",
+  "deletionProcessAuditLogsDetails_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+  "deletionProcessAuditLogsDetails_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+  "deletionProcessAuditLogsDetails_approved": "The deletion process was approved.",
+  "deletionProcessAuditLogsDetails_rejected": "The deletion process was rejected.",
+  "deletionProcessAuditLogsDetails_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+  "deletionProcessAuditLogsDetails_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+  "deletionProcessAuditLogsDetails_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+  "deletionProcessAuditLogsDetails_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+  "deletionProcessAuditLogsDetails_unknownMessageKey": "Unknown message key.",
   "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
   "identityDetails_card_publicKey": "Public Key",
   "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
