chore: add required into the dialogs

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -38,7 +38,8 @@
   "period": "Period",
   "quotas": "Quotas",
   "retry": "Retry",
-    "create": "Create",
+  "required": "required",
+  "create": "Create",
   "save": "Save",
   "searchTiers": "Search Tiers",
   "settings": "Settings",
