chore: add remove to translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -39,6 +39,7 @@
   "quotas": "Quotas",
   "retry": "Retry",
   "required": "required",
+  "remove": "Remove",
   "save": "Save",
   "searchTiers": "Search Tiers",
   "settings": "Settings",
