refactor: change the button display text

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -41,6 +41,7 @@
   "required": "required",
   "remove": "Remove",
   "save": "Save",
+  "showAll": "Show all",
   "searchTiers": "Search Tiers",
   "settings": "Settings",
   "source": "Source",
