chore: add translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -24,6 +24,7 @@
   "devices": "Devices",
   "displayName": "Display Name",
   "hour": "Hour",
+  "id": "ID",
   "identityVersion": "Identity Version",
   "lastLoginAt": "Last Login at",
   "light": "Light",
@@ -73,6 +74,38 @@
   "createTierDialog_formMessage": "Please fill the form below to create your Tier",
   "createTierDialog_nameCannotBeEmpty": "Name cannot be empty.",
   "createTierDialog_tierCreatedSuccess": "Tier was created successfully.",
+  "deletionProcessTable_title": "Deletion Processes",
+  "deletionProcessTable_title_description": "View deletion processes of this Identity.",
+  "deletionProcessTable_status": "Status",
+  "deletionProcessTable_approvalReminders": "Approval Reminders",
+  "deletionProcessTable_approvedAt": "Approved At",
+  "deletionProcessTable_approvedByDevice": "Approved by Device",
+  "deletionProcessTable_gracePeriodReminders": "Grace Period Reminders",
+  "deletionProcessTable_gracePeriodEndsAt": "Grace Period Ends At",
+  "deletionProcessTable_noDeletionProcessFound": "No deletion processes found.",
+  "deletionProcessTable_approvalRemindersCell_reminder": "Reminder",
+  "deletionProcessTable_approvalRemindersCell_noData": "No Data",
+  "deletionProcessDetails_title": "Deletion Process Details",
+  "deletionProcessDetails_deletionProcessID": "Deletion Process ID",
+  "deletionProcessDetails_status": "Status",
+  "deletionProcessDetails_auditLogs_title": "Deletion Process Audit Logs",
+  "deletionProcessDetails_auditLogs_title_description": "View deletion process audit logs for Identity",
+  "deletionProcessDetails_auditLogs_noData": "No deletion process audit logs found.",
+  "deletionProcessDetails_auditLogs_waitingForApproval": "Waiting for Approval",
+  "deletionProcessDetails_auditLogs_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+  "deletionProcessDetails_auditLogs_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+  "deletionProcessDetails_auditLogs_approved": "The deletion process was approved.",
+  "deletionProcessDetails_auditLogs_rejected": "The deletion process was rejected.",
+  "deletionProcessDetails_auditLogs_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+  "deletionProcessDetails_auditLogs_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+  "deletionProcessDetails_auditLogs_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+  "deletionProcessDetails_auditLogs_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+  "deletionProcessDetails_auditLogs_unknownMessageKey": "Unknown message key.",
   "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
   "identityDetails_card_publicKey": "Public Key",
   "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
@@ -92,7 +125,6 @@
   "quotaButtonGroup_theTier": "The Tier",
   "quotaButtonGroup_errorDeletingQuota": "An error occurred while deleting the quota(s). Please try again.",
   "quotaButtonGroup_selectedQuotaRemoved": "Selected quota(s) have been removed.",
-  "tierDetails_tierID": "ID",
   "tierDetails_quotaList_titleDescription": "View and assign quotas for this tier.",
   "tierDetails_quotaList_titleDescription_readOnly": "View quotas for this tier. This tier is managed by the system and therefore read-only.",
   "tierDetails_quotaList_noQuotaForTier": "No quotas added to this tier.",
