refactor: rename translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -1,9 +1,10 @@
 {
   "@@locale": "en",
- "add": "Add",
+  "add": "Add",
   "addQuota": "Add Quota",
   "address": "Address",
   "assign": "Assign",
+  "all": "All",
   "cancel": "Cancel",
   "changeClientSecret": "Change Client Secret",
   "changeTier": "Change Tier",
@@ -92,20 +93,22 @@
   "deletionProcessDetails_auditLogs_title_description": "View deletion process audit logs for Identity",
   "deletionProcessDetails_auditLogs_noData": "No deletion process audit logs found.",
   "deletionProcessDetails_auditLogs_waitingForApproval": "Waiting for Approval",
-  "deletionProcessDetails_auditLogs_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
-  "deletionProcessDetails_auditLogs_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
-  "deletionProcessDetails_auditLogs_approved": "The deletion process was approved.",
-  "deletionProcessDetails_auditLogs_rejected": "The deletion process was rejected.",
-  "deletionProcessDetails_auditLogs_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
-  "deletionProcessDetails_auditLogs_cancelledBySupport": "The deletion process was cancelled by a support employee.",
-  "deletionProcessDetails_auditLogs_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
-  "deletionProcessDetails_auditLogs_approvalReminder1Sent": "The first approval reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_approvalReminder2Sent": "The second approval reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_approvalReminder3Sent": "The third approval reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
-  "deletionProcessDetails_auditLogs_unknownMessageKey": "Unknown message key.",
+  "deletionProcessDetails_cancelDeletionProcess_title": "Cancel Deletion Process",
+  "deletionProcessDetails_cancelDeletionProcess_message": "Are you sure you want to cancel deletion process?",
+  "messageTemplate_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+  "messageTemplate_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+  "messageTemplate_approved": "The deletion process was approved.",
+  "messageTemplate_rejected": "The deletion process was rejected.",
+  "messageTemplate_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+  "messageTemplate_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+  "messageTemplate_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+  "messageTemplate_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+  "messageTemplate_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+  "messageTemplate_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+  "messageTemplate_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+  "messageTemplate_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+  "messageTemplate_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+  "messageTemplate_messagesHaveBeenDeleted": "have been deleted.",
   "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
   "identityDetails_card_publicKey": "Public Key",
   "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
