AdminUI: Display relationships of an identity (#715)
* feat: add relationship table to identity details

* refactor: rename translations

* refactor: rename the file

* refactor: simplify the parameter calls

* refactor: naming

* refactor: naming

* refactor: naming

* refactor: naming

* chore: newlines

* chore: do not export stuff from non barrel files

* fix: remove duplicated card

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Julian König <julian.koenig@js-soft.com>

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
- "add": "Add",
+  "add": "Add",
   "addQuota": "Add Quota",
   "address": "Address",
   "assign": "Assign",
@@ -78,6 +78,18 @@
   "identityDetails_card_publicKey": "Public Key",
   "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
   "identityDetails_card_publicKey_tooltipMessage": "Copy public key",
+  "identityRelationshipTable_peer": "Peer",
+  "identityRelationshipTable_requestedBy": "Requested By",
+  "identityRelationshipTable_templateId": "Template ID",
+  "identityRelationshipTable_status": "Status",
+  "identityRelationshipTable_creationDate": "Creation Date",
+  "identityRelationshipTable_answeredAt": "Answered At",
+  "identityRelationshipTable_createdByDevice": "Created By Device",
+  "identityRelationshipTable_answeredByDevice": "Answered By Device",
+  "identityRelationshipTable_emptyRelationshipTable": "No relationships for this identity found.",
+  "identityRelationshipTable_relationships": "Relationships",
+  "identityRelationshipTable_viewIdentityRelationships": "View relationships of this identity",
+  "identityRelationshipTable_errorLoadingData": "An error occurred loading data.",
   "identityDetails_receivedMessages_title": "Received Messages",
   "identityDetails_receivedMessages_subtitle": "View messages received by this identity.",
   "identityDetails_noReceivedMessagesFound": "No received messages found.",
